# modgraph

./: .ccls  .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CodeCoverage.cmake  Makefile  README.md  asy-adapter.hpp  dynamic-targets  gen-graph-data  graph.cpp  graph.hpp  gsl-funcs.hpp  make-pngs  minimizer.cpp  minimizer.hpp  modgraph.cpp  node.hpp  particle-system.cpp  particle-system.hpp  test.asy
gsl/: CMakeLists.txt  Vector.hpp  VectorTest.cpp  block.hpp  blockTest.cpp  size-code.hpp  testMain.cpp  vec-base-test.cpp  vec-base.hpp  vec-iface.hpp  vector-test.cpp  vector.hpp  vectorTest.cpp  view-aux.hpp  view.hpp
gsl/impl/: vec-base-impl.hpp  vec-iface-impl.hpp
modgraph/: .gitignore  Makefile  graph.cpp  graph.hpp  gsl-funcs.cpp  minimizer.cpp  modgraph.cpp
